- Added: DreamboxPlugin (csp-agent) support for more/older dm500 images. Basic (unsecured) file upload support.
- Added: proxy-reference.html updated with highlighting for important elements and additional examples.
- Added: New TestUserManager to show how to add um-specific functionality without changing the core or existing um's.

- Changes to proxy.xml:
  Added: Attribute 'enable-service-linking' to <cache-handler> (true/false, default: false). Enables sid cache linker.
  Added: Attribute 'allow-different-ip' to <user-manager>, allows newcamd connections from different ip sources
  for the same user.

- Changes to the http/xml api:
  Added: Attribute 'filtered-by' to <ecm> (transaction logs). Contains the reason for a B flag, or the filtering plugin.
  Added: New event type 9 - "found service" added to connector events output (error-log, yes - not really an error).
  Added: New ctrl command 'set-connector-metric', allows changing individual connector metrics without config reload.
  Added: New ctrl command 'set-au-user', forces a specified user to au status for a connector (kicking existing sessions)
  Added: Attributes 'reset-services', 'blocked-services', 'allowed-services' to <profile> (ca-profiles output). Shows
  the currently configured lists resolved with service names (but only if they're shorter than 25 entries).


0.9.0 - 2010-08-15 (see README.0.9.0.txt for conceptual changes and tips)

- Fixed: The included ConaxConnector plugin in 0.8.13 was an older version.
- Fixed: Extra http auth login was required for accessing plugin webs (bug introduced in 0.8.13).
- Fixed: Probing of connectors with unknown status wasn't done when cache hits occured.
- Fixed: No longer possible to create multiple profiles where both ca-id and network-id are the same.
- Fixed: Anonymized (non-au) newcamd card-data can no longer end up with user id 1 (this confused some clients).