@@ -31,6 +31,8 @@ Cardservproxy changelog:
 - Added: DreamboxPlugin (csp-agent) support for more/older dm500 images. Basic (unsecured) file upload support.
 - Added: proxy-reference.html updated with highlighting for important elements and additional examples.
 - Added: New TestUserManager to show how to add um-specific functionality without changing the core or existing um's.
+- Added: New AdvXmlUserManager similar to XmlUserManager but with "advanced" features (ecm-rate, start and expire-date)
+  based on the suggestions made in TestUserManager.
 
 - Changes to proxy.xml:
   Added: Attribute 'enable-service-linking' to <cache-handler> (true/false, default: false). Enables sid cache linker.
